# cloth-manipulation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  setup.cfg  setup_virtual_wall_node.sh
Codim-IPC/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  build_Mac.py  make.py
Codim-IPC/Documents/: Storage.md
Codim-IPC/Python/: __init__.py
cm_utils/: setup.py
cm_utils/cm_utils/: __init__.py  cipc.py  cipc_sim.py  dirs.py  export.py  folds.py  folds_old.py  geometry.py  grasp.py  import_IPC_output.py  keyframe.py  material_properties.py  path.py  render.py  save_fcurves_as_waypoints.py  test.py  trajectory.py
experiments/: fold_sleeves.py  fold_sleeves_init_sweep.py  fold_sleeves_init_sweep_fix.py  fold_sleeves_run_wandb.py  run_fold_wandb.py
experiments/archive/: cipc.py  folds_old.py
experiments/draping/: compare_materials.py  ipc_old.py  run_drapes_batch.py  scene.blend  scene_cube.blend  scene_ico.blend  scene_simple.blend  scene_simpler.blend  scene_simplest.blend  simulate_drape.py
experiments/fold_middle/: fold_middle.py  fold_middle_init_sweep.py  shirt_folded_sides.mtl
experiments/fold_sides/: fold_sides.py  fold_sides_init_sweep.py
experiments/fold_sleeve_variations/: fix_run_fold_wandb.py  (+3 more)
tests/: fold_sleeve_quick.py  fold_sleeve_quick_init_sweep.py  fold_sleeve_quick_run_wandb.py
visualizations/: README.md  figure_bezier_curve.py  figure_fold_specification.py  figure_fold_target.py  figure_keypoints.py  figure_search_space.py  fold_lines.py  fold_sequence.py  fold_targets.py  towel.py  towel_fold.py
(+68 files in other folders)
