[metadata]
name = cloth_manipulation
version = 0.0.0
author = Victor-Louis De Gusseme
author_email = victorlouisdg@gmail.com
description = Blender utils for cloth manipulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Victorlouisdg/cloth_manipulation
project_urls =
    Bug Tracker = https://github.com/Victorlouisdg/cloth_manipulation/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
    wandb

[options.packages.find]
where = src
